# perception_pipeline

./: CMakeLists.txt  LICENSE  README.md  killall.sh  package.xml  robostackenv.yml  set-env.sh  setup.py  workspace.code-workspace
config/: lidar-config.yaml  rvizconfig.rviz  transforms-home.yaml  transforms-lab.yaml  transforms.yaml
launch/: perception_pipeline.launch  prediction_services.launch  processing_node.launch  semantic_segmentation_pipeline.launch  semseg_node.launch  sensorRealtime.launch  sensorplayback.launch  transform_node.launch
msg/: Quadcloud.msg
scripts/: Untitled.ipynb  listener.py  pointcloud_publisher.py  pointcloud_test.py  prediction_service.py  semseg.py  talker.py
src/: octreevoxelgrid.h  perception_node.cpp  semseg_node.cpp  sensor_playback.cpp  static_transforms.cpp  statistics.h  sync_node.cpp  transformpipe_node.cpp
src/semseg/: semseg.py
srv/: PredictLabels.srv
